# Comp3016

./: CMakeLists.txt  CMakePresets.json  README.md  comp3016.cpp  comp3016.h  copy_dlls.bat  vcpkg.json
resources/models/: key.mtl  simple_cube.mtl  test_chest.mtl  test_key.mtl  treasure_chest.mtl
resources/shaders/: advanced_lighting.frag  advanced_lighting.vert  basic.frag  blinn_phong.frag  blinn_phong.vert  lighting.frag  shadow_map.frag  shadow_map.vert  shadow_receive.frag  shadow_receive.vert  simple.frag  simple.vert  terrain.frag  terrain.vert  terrain_shadow.frag  terrain_shadow.vert  test.frag  test.vert  ui.frag  ui.vert
resources/shaders/postprocess/: fxaa.frag  simple_display.frag  tonemapping.frag  tonemapping.vert
resources/textures/: metal_specular.ppm  readme.txt  wood_diffuse.ppm
src/: AdvancedTexture.cpp  AdvancedTexture.h  Application.cpp  Application.h  Camera.cpp  Camera.h  CollectibleItem.cpp  CollectibleItem.h  EventSystem.cpp  EventSystem.h  GameInteraction.cpp  GameInteraction.h  GameState.h  Geometry.cpp  Geometry.h  IrrklangAudioManager.cpp  IrrklangAudioManager.h  LayoutManager.cpp  LayoutManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PerformanceProfiler.cpp  PerformanceProfiler.h  PhysicsCamera.cpp  PhysicsCamera.h  PhysicsManager.cpp  PhysicsManager.h  PostProcessing.cpp  PostProcessing.h  Shader.cpp  Shader.h  ShadowMapping.cpp  ShadowMapping.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainPlacement.cpp  TerrainPlacement.h  Texture.cpp  (+2 more)
src/CustomGUI/: FontRenderer.cpp  FontRenderer.h  GUIManager.cpp  GUIManager.h  UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIPanel.cpp  UIPanel.h  UIText.cpp  UIText.h
